--- a/explorer/templates/explorer/challenge-identify.html
+++ b/explorer/templates/explorer/challenge-identify.html
@@ -31,7 +31,7 @@ $(document).ready(function(){
 {% endblock %}
 
 {% block main-content %}
-<div class="container-fluid">
+<div class="container">
   <!-- Example row of columns -->
   <div class="row page-header">
     <div class="col-lg-12">
