--- a/explorer/templates/explorer/login.html
+++ b/explorer/templates/explorer/login.html
@@ -4,45 +4,48 @@
 {% block script-content %}
 {% endblock %}
 
+{%block wrapper-class %}{% endblock %}
+
 {% block main-content %}
 
-{% if form.errors %}
-			<div class="menuholder">
-				{% for e in form.non_field_errors %}
-				<div id="msg" class="error" style="display:block;">{{e}}</div>
-				{% endfor %}
-			</div>
-{% endif %}
-			<div id="main">
-
-				<div class="bigpadded">
-					<div class="row">
-					<h1>Serol</h1>
-					<h3>Log into your On Sky account</h3>
-					<form action="" method="post"  id="loginForm" >
-            {% csrf_token %}
-						<div class="row">
-							<label for="username">Email Address:</label>
-							<input type="text" name="username" value="" id="username">
-							<div class="red">{{form.username.errors.as_text}}</div>
-						</div>
-						<div class="row">
-							<label for="password">Password:</label>
-							<input type="password" name="password" value="" id="password">
-							<div class="red">{{form.password.errors.as_text}}</div>
-						</div>
-						<input type="hidden" name="next" value="{{ next }}">
-						<div class="row">
-							<button id="login-btn" class="btn btn-primary-lg">Log me in</button>
-              <div class="tos">By logging in, you agree to <a href="http://lco.global/observatory/termsofuse" target="_blank">the Las Cumbres Observatory terms of use</a>.</div>
-						</div>
-						<div class="row account_options">
-							<a href="https://observe.lco.global/accounts/register/">Need an account?</a>
-							&nbsp;
-							<a href="https://observe.lco.global/accounts/password/reset/">Forgot your password?</a>
-						</div>
-					</form>
-				</div>
-			</div>
-		</div>
+<div class="container">
+			<h1>Serol</h1>
+			<h3>Log into your On Sky account</h3>
+    <div class="row text-center">
+      <form action="" method="post"  id="loginForm" >
+        {% csrf_token %}
+        <div class="row">
+          <div class="col">
+      			<label for="username">Email Address:</label>
+          </div>
+          <div class="col">
+      			<input type="text" name="username" value="" id="username">
+      			<div class="red">{{form.username.errors.as_text}}</div>
+          </div>
+        </div>
+      	<div class="row pt-2">
+          <div class="col">
+        		<label for="password">Password:</label>
+          </div>
+          <div class="col">
+        		<input type="password" name="password" value="" id="password">
+        		<div class="red">{{form.password.errors.as_text}}</div>
+          </div>
+      	</div>
+				{% if form.errors %}
+								{% for e in form.non_field_errors %}
+								<div class="text-danger" style="display:block;">{{e}}</div>
+								{% endfor %}
+				{% endif %}
+          <input type="hidden" name="next" value="{{ next }}">
+      		<button id="login-btn" class="btn btn-primary-lg">Log me in</button>
+          <p class="small">By logging in, you agree to <a href="http://lco.global/observatory/termsofuse" target="_blank">the Las Cumbres Observatory terms of use</a>.</p>
+      	<p class="small">
+      		<a href="https://observe.lco.global/accounts/register/">Need an account?</a>
+      		&nbsp;
+      		<a href="https://observe.lco.global/accounts/password/reset/">Forgot your password?</a>
+      	</p>
+      </form>
+    </div>
+  </div>
 {% endblock %}
