--- a/explorer/templates/explorer/mission.html
+++ b/explorer/templates/explorer/mission.html
@@ -4,7 +4,7 @@
  {%block wrapper-class %}mission-{{object.number}}-header{% endblock %}
 
 {% block main-content %}
-  <div class="container-fluid">
+  <div class="container">
   <div class="row">
     <div class="col-2 mission-title">
       <h1 class="side-writing">{% trans "Mission" %} {{object.number}}</h1>
