--- a/explorer/templates/explorer/challenge-message.html
+++ b/explorer/templates/explorer/challenge-message.html
@@ -15,9 +15,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-10 offset-md-2">
-    {% if progress.status == "Start"%}
+    {% if progress.status == "New"%}
     <p class="lead">{{object.description|safe}}</p>
-    <p>{{progress.status}}</p>
     <a href="{% url 'observe' object.pk %}" class="tn btn-info btn-lg  animated tada">Start the challenge ></a>
     {% elif progress.status == "Submitted" %}
     <p>{% trans "Serol has asked Las Cumbres Observatory to take your picture in" %}</p>
@@ -49,8 +48,8 @@
   </div>
 {% endblock %}
 
-{% if progress.status == "Submitted" %}
 {% block script-content %}
+{% if progress.status == "Submitted" %}
 <script src="{% static "explorer/js/utils.js" %}"  type="text/javascript" ></script>
 <script>
 var requestid = "{{progress.requestids}}";
@@ -59,5 +58,5 @@ $(document).ready(function(){
   resp = status_request(requestid, localStorage.getItem('token'));
 });
 </script>
-{% endblock%}
 {% endif %}
+{% endblock%}
