--- a/explorer/templates/explorer/challenge-message.html
+++ b/explorer/templates/explorer/challenge-message.html
@@ -1,7 +1,7 @@
 {% extends 'explorer/base.html' %}
 {% load static i18n %}
 
-{% block wrapper-class%}mission-{{object.mission.number}}-sidebar{%endblock%}
+{% block wrapper-class%}challenge mission-{{object.mission.number}}-sidebar{%endblock%}
 
 {% block main-content %}
 <div class="container-fluid">
