--- a/explorer/templates/explorer/challenge-observe.html
+++ b/explorer/templates/explorer/challenge-observe.html
@@ -71,7 +71,7 @@ $(document).ready(function(){
 });
 </script>
 {% endblock%}
-{% block wrapper-class%}mission-{{object.mission.number}}-sidebar{%endblock%}
+{% block wrapper-class%}challenge mission-{{object.mission.number}}-sidebar{%endblock%}
 
 {% block main-content %}
 <div class="container-fluid">
