--- a/explorer/templates/explorer/mission.html
+++ b/explorer/templates/explorer/mission.html
@@ -1,10 +1,9 @@
 {% extends "explorer/base.html" %}
 {% load i18n %}
 
- {%block wrapper-class %}mission-{{object.number}}-header{% endblock %}
 
 {% block main-content %}
-  <div class="container">
+  <div class="container challenge-header mission-{{object.number}}-header">
   <div class="row">
     <div class="col-2 mission-title">
       <h1 class="side-writing">{% trans "Mission" %} {{object.number}}</h1>
