--- a/explorer/templates/explorer/challenge-identify.html
+++ b/explorer/templates/explorer/challenge-identify.html
@@ -7,24 +7,27 @@
 <script src="{% static 'explorer/js/utils.js' %}" ></script>
 <script>
 var images = Array();
-images.push({'mine':true, 'url':"https://s3-us-west-2.amazonaws.com/thumbnails.lcogt.net/6794624.-7029006549152786650.jpg?AWSAccessKeyId=AKIAIIXJI2IT23CSF2RA&Signature=3RZsKNimPTFZiV%2BTbiiXW5sLSTs%3D&Expires=1502923587"});
+var requestid = {{ progress.requestids}};
 images.push({'mine':false, 'url':"http://lcogt.net/files/rtisba/faulkes-rti/imagearchive/2013/08/07/process-1835-2.jpg"});
 images.push({'mine':false, 'url':"http://lcogt.net/files/rtisba/faulkes-rti/imagearchive/2013/04/26/process-2408-1.jpg"});
 images.push({'mine':false, 'url':"http://lcogt.net/files/rtisba/faulkes-rti/imagearchive/2013/04/04/process-753-2.jpg"});
 
-images = shuffle(images);
-
 $(document).ready(function(){
-  for (i=0;i<4;i++){
-    $("#img-"+i).attr('src',images[i]['url']);
-    $("#img-text-"+i).data('mine',images[i]['mine']);
-  }
-  $(".identify-text").on('click', function(d){
-    if ($(this).data('mine') == true){
-      console.log('YES')
-    } else {
-      console.log($(this));
+
+  $.when(status_request(requestid, localStorage.getItem('token'))).then(function(resp){
+    images.push({'mine':true, 'url':resp['url']});
+    images = shuffle(images);
+    for (i=0;i<4;i++){
+      $("#img-"+i).attr('src',images[i]['url']);
+      $("#img-text-"+i).data('mine',images[i]['mine']);
     }
+    $(".identify-text").on('click', function(d){
+      if ($(this).data('mine') == true){
+        console.log('YES')
+      } else {
+        console.log($(this));
+      }
+    });
   });
 });
 </script>
