--- a/explorer/templates/explorer/mission.html
+++ b/explorer/templates/explorer/mission.html
@@ -5,7 +5,7 @@
 {% block main-content %}
 
 <div class="content-wrapper">
-  <div class="container content-wrapper-inner challenge-header mission-{{object.number}}-header">
+  <div class="container content-wrapper-inner challenge-header mission-{{object.number}}">
   <div class="row">
     <div class="col-12  mission-content">
       <h1 class="mission-name">{{object.name|safe}}</h1>
