--- a/explorer/templates/explorer/challenge-identify.html
+++ b/explorer/templates/explorer/challenge-identify.html
@@ -8,27 +8,26 @@
 <script>
 var images = Array();
 var requestid = {{ progress.requestids}};
-images.push({'mine':false, 'url':"http://lcogt.net/files/rtisba/faulkes-rti/imagearchive/2013/08/07/process-1835-2.jpg"});
-images.push({'mine':false, 'url':"http://lcogt.net/files/rtisba/faulkes-rti/imagearchive/2013/04/26/process-2408-1.jpg"});
-images.push({'mine':false, 'url':"http://lcogt.net/files/rtisba/faulkes-rti/imagearchive/2013/04/04/process-753-2.jpg"});
-
+images.push({'mine':false, 'url':"https://lco.global/files/rtisba/faulkes-rti/imagearchive/2013/08/07/process-1835-2.jpg"});
+images.push({'mine':false, 'url':"https://lco.global/files/rtisba/faulkes-rti/imagearchive/2013/04/26/process-2408-1.jpg"});
+images.push({'mine':false, 'url':"https://lco.global/files/rtisba/faulkes-rti/imagearchive/2013/04/04/process-753-2.jpg"});
+var tmp;
 $(document).ready(function(){
-
-  $.when(status_request(requestid, localStorage.getItem('token'))).then(function(resp){
-    images.push({'mine':true, 'url':resp['url']});
-    images = shuffle(images);
-    for (i=0;i<4;i++){
-      $("#img-"+i).attr('src',images[i]['url']);
-      $("#img-text-"+i).data('mine',images[i]['mine']);
-    }
-    $(".identify-text").on('click', function(d){
-      if ($(this).data('mine') == true){
-        console.log('YES')
-      } else {
-        console.log($(this));
-      }
+  $.when(
+    $.getJSON({url: 'https://archive-api.lco.global/frames/?limit=1&offset=1&ordering=-id&REQNUM='+requestid,
+      headers: {'Authorization': 'Token '+localStorage.getItem('archive_token')},
+      dataType: 'json',
+      contentType: 'application/json'}))
+    .done(function(rdata){
+        var data = {};
+        if (rdata['results'].length > 0){
+          data['frame'] = rdata['results'][0]['id'];
+          data['url'] = rdata['results'][0]['url'];
+        }
+        console.log("Number of Images ="+rdata['results'].length);
+        arrange_images(data);
     });
-  });
+
 });
 </script>
 {% endblock %}
