--- a/explorer/templates/explorer/home.html
+++ b/explorer/templates/explorer/home.html
@@ -54,8 +54,8 @@ $(document).ready(function(){
       </div>
       <div class="modal-video">
           <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/84910153?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;color=e89a3e"
-                      webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/fNk-VL57HUg" frameborder="0"
+                  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
       </div>
       <div class="modal-footer">
