--- a/explorer/templates/explorer/challenge-message.html
+++ b/explorer/templates/explorer/challenge-message.html
@@ -46,6 +46,8 @@
   </div>
   </div>
   </div>
+  <div class="corner-ribbon top-right sticky shadow mission-{{object.number}}-colour"><h1>{% trans "Mission" %} {{object.number}}</h1></div>
+
 {% endblock %}
 
 {% block script-content %}
