--- a/explorer/static/explorer/css/layout.css
+++ b/explorer/static/explorer/css/layout.css
@@ -363,6 +363,109 @@ img.identify-image {
 .grow { transition: all 1.5s ease-in-out;
         transform: scale(2);}
 
+/* Stickers
+*/
+.blank-sticker {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  border-style: dashed;
+  border-color: #aaa;
+  border-width: 3px;
+  min-height: 100%;
+}
+
+/* Toggle switch for analyser
+*/
+
+.question-container{
+  display: block;
+  position: relative;
+  height: auto;
+  padding: 20px;
+}
+
+
+.question-container ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+	overflow: auto;
+}
+
+.question-container ul li{
+  color: #AAAAAA;
+  display: block;
+  position: relative;
+  float: left;
+  width: 100%;
+	border-bottom: 1px solid #333;
+}
+
+.question-container ul li input[type=radio]{
+  position: absolute;
+  visibility: hidden;
+}
+
+.question-container ul li label{
+  display: block;
+  position: relative;
+  padding: 10px 20px 10px 60px;
+  margin: 10px auto;
+  height: 100%;
+  z-index: 9;
+  cursor: pointer;
+  -webkit-transition: all 0.25s linear;
+}
+
+.question-container ul li:hover label{
+	color: #FFFFFF;
+}
+
+.question-container ul li .check{
+  display: block;
+  position: absolute;
+  border: 5px solid #AAAAAA;
+  border-radius: 100%;
+  height: 25px;
+  width: 25px;
+  top: 30px;
+  left: 20px;
+	z-index: 5;
+	transition: border .25s linear;
+	-webkit-transition: border .25s linear;
+}
+
+.question-container ul li:hover .check {
+  border: 5px solid #FFFFFF;
+}
+
+.question-container ul li .check::before {
+  display: block;
+  position: absolute;
+	content: '';
+  border-radius: 100%;
+  height: 15px;
+  width: 15px;
+  top: 0px;
+	left: 0px;
+  margin: auto;
+	transition: background 0.25s linear;
+	-webkit-transition: background 0.25s linear;
+}
+
+input[type=radio]:checked ~ .check {
+  border: 5px solid #0DFF92;
+}
+
+input[type=radio]:checked ~ .check::before{
+  background: #0DFF92;
+}
+
+input[type=radio]:checked ~ label{
+  color: #0DFF92;
+}
+
 /* Wrapper layouts
 */
 
