--- a/explorer/templates/explorer/base.html
+++ b/explorer/templates/explorer/base.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Serol and the Cosmic Explorers | powered by Las Cumbres Observatory</title>
+    <title>Serol's Cosmic Adventures | {% block title %}powered by Las Cumbres Observatory{% endblock %}</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -16,8 +16,8 @@
 
     <link href="{% static "explorer/css/layout.css" %}" rel="stylesheet">
 
-    <script defer src="{% static "explorer/js/solid.min.js" %}"></script>
-    <script defer src="{% static "explorer/js/fontawesome.min.js" %}"></script>
+    <link rel="stylesheet" href="{% static 'explorer/css/font-awesome-regular.css' %}">
+    <link rel="stylesheet" href="{% static 'explorer/css/font-awesome-core.css' %}">
   </head>
 
   <body>
@@ -31,20 +31,20 @@
 
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item"><a class="nav-link" href="#">Become a Cosmic Explorer</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">About Serol</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">{% trans "Become a Cosmic Explorer" %}</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">{% trans "About Serol" %}</a></li>
               {% if request.user.is_authenticated %}
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   {{ request.user}}
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Your Profile</a>
-                  <a class="dropdown-item" href="{% url 'auth_logout' %}" id="logout">Logout</a>
+                  <a class="dropdown-item" href="{% url 'stickers' %}">{% trans "Your Stickers" %}</a>
+                  <a class="dropdown-item" href="{% url 'auth_logout' %}" id="logout">{% trans "Logout" %}</a>
                 </div>
               </li>
               {% else %}
-              <li class="nav-item" id="login"><a class="nav-link" href="{% url 'auth_login' %}">Login</a></li>
+              <li class="nav-item" id="login"><a class="nav-link" href="{% url 'auth_login' %}">{% trans "Login" %}</a></li>
               {% endif %}
             </ul>
           </div>
@@ -71,33 +71,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="{% static "explorer/js/auth.js" %}"  type="text/javascript" ></script>
     {% block script-content %}
-    <script>
-    $(document).ready(function(){
-
-      $( "#login-btn" ).click(function( event ) {
-    		event.preventDefault();
-    		login($('#username').val(), $('#password').val(), function(result){
-    	    if(result){
-    	      $('#loginForm').hide();
-    	      $('#alert-error').hide();
-    	      $('#logout').show();
-            $('#login').hide();
-    				//$( "#login-form" ).submit();
-    	    }else{
-    	      $('#alert-error').show().find('strong').text('Login Failed');
-    	    }
-    	  });
-      });
-
-
-      $('#logout').click(function(){
-        logout();
-        $('#loginForm').show();
-        $('#logout').hide();
-        $('#login').show();
-      });
-    });
-    </script>
     {% endblock %}
   </body>
 </html>
