--- a/explorer/templates/explorer/challenge-analyser.html
+++ b/explorer/templates/explorer/challenge-analyser.html
@@ -6,31 +6,31 @@
 {% block script-content %}
 <script src="{% static 'explorer/js/utils.js' %}" ></script>
 <script>
-var images = Array();
-var redirect_url = "{% url 'start' object.id %}?next"
 var requestid = {{ progress.requestids}};
-images.push({'mine':false, 'url':"https://lco.global/files/rtisba/faulkes-rti/imagearchive/2013/08/07/process-1835-2.jpg"});
-images.push({'mine':false, 'url':"https://lco.global/files/rtisba/faulkes-rti/imagearchive/2013/04/26/process-2408-1.jpg"});
-images.push({'mine':false, 'url':"https://lco.global/files/rtisba/faulkes-rti/imagearchive/2013/04/04/process-753-2.jpg"});
+var frameid;
 $(document).ready(function(){
-  $.when(
-    $.get({url: 'https://archive-api.lco.global/frames/?limit=1&offset=1&ordering=-id&REQNUM='+requestid,
-      headers: {'Authorization': 'Token '+localStorage.getItem('archive_token')},
-      dataType: 'json',
-      contentType: 'application/json'}))
-    .done(function(rdata){
-        var frameid;
-        if (rdata['results'].length > 0){
-          console.log(rdata);
-          frameid = rdata['results'][0]['id'];
-          get_colour_image(localStorage.getItem('archive_token'), frameid)
-        }
-        console.log("Number of Images ="+rdata['results'].length);
-    })
-    .fail(function(d){
+  frameid = get_qs('frameid');
+  if (frameid == undefined){
+    $.when(
+      $.get({url: 'https://archive-api.lco.global/frames/?limit=1&offset=1&ordering=-id&REQNUM='+requestid,
+        headers: {'Authorization': 'Token '+localStorage.getItem('archive_token')},
+        dataType: 'json',
+        contentType: 'application/json'}))
+      .done(function(rdata){
+          var frameid;
+          if (rdata['results'].length > 0){
+            console.log(rdata);
+            frameid = rdata['results'][0]['id'];
+            get_colour_image(localStorage.getItem('archive_token'), frameid, mode='analyser')
+          }
+          console.log("Number of Images ="+rdata['results'].length);
+      })
+      .fail(function(d){
 
-    });
-
+      });
+    } else {
+      get_colour_image(localStorage.getItem('archive_token'), frameid, mode='analyser')
+    }
 
 });
 </script>
@@ -48,24 +48,29 @@ $(document).ready(function(){
 <div class="container pt-2">
   <div class="row">
     <div class="col-md-6 offset-md-2">
-      <img src="http://placehold.it/300x300" alt="Avatar" class="identify-image img-fluid rounded" id="img-{{i}}">
+      <img src="http://placehold.it/300x300" alt="{{object.name}}" class="img-fluid rounded" id="img-analyser">
     </div>
     <div class="col-md-4">
       <div class=" side-panel">
+      {% for question in questions %}
       <h3>{{question.text}}</strong></h3>
 
-      <p>
-        {% for answer in answers %}
-        <div class="btn-group btn-group-vertical" data-toggle="buttons">
-         <label class="btn active">
-           <input type="radio" name='answer-{{answer.pk}}' checked><i class="fa fa-circle-o fa-2x"></i><i class="fa fa-dot-circle-o fa-2x"></i> <span>  {{answer.text}}</span>
-         </label>
-       </div>
+        <div class="question-container">
+        <ul>
+        {% for answer in question.answer_set.all %}
+        <li>
+           <input type="radio" name='answer' id="answer-{{answer.pk}}">
+           <label for="answer-{{answer.pk}}">{{answer.text}}</label>
+           <div class="check"></div>
+       </li>
        {% endfor %}
-      </p>
+     </ul>
+   </div>
+   {% endfor %}
     </div>
     </div>
   </div>
+
 </div>
 <div class="corner-ribbon top-right sticky shadow mission-{{object.number}}-colour"><h2>{% trans "Mission" %} {{object.number}}</h2></div>
 
