--- a/explorer/templates/explorer/challenge-summary.html
+++ b/explorer/templates/explorer/challenge-summary.html
@@ -26,7 +26,7 @@
           <i class="fas fa-alarm-clock fa-10x"></i>
         </div>
         <div class="col-md-8">
-        <h2 class="request-status-info"><span id="request-time"><i class="fa fa-cog fa-spin fa-fw"></i></span></h2>
+        <h2 class="request-status-info"><span id="request-time"><i class="fas fa-cog fa-spin fa-fw"></i></span></h2>
         </div>
       </div>
       <div class="row">
@@ -56,7 +56,6 @@
 <script>
 var requestid = "{{progress.userrequestid}}";
 var resp;
-var resp_tmp;
 var redirect_url = "{% url 'challenge' object.id %}";
 $(document).ready(function(){
   resp = status_request(requestid, localStorage.getItem('token'));
