--- a/explorer/templates/explorer/logout.html
+++ b/explorer/templates/explorer/logout.html
@@ -12,7 +12,7 @@ $(document).ready(function(){
 
 {%block wrapper-class %}{% endblock %}
 
-{% block main-content %}
+{% block main-body %}
 
 <div class="container">
 			<h1>Serol</h1>
