--- a/explorer/static/explorer/css/layout.css
+++ b/explorer/static/explorer/css/layout.css
@@ -16,6 +16,64 @@ a:hover {
   border: .05rem solid #fff;
 }
 
+.btn {
+	border: none;
+	color: #fff;
+	background: #222;
+	cursor: pointer;
+	display: inline-block;
+	text-transform: uppercase;
+}
+
+.btn:after {
+	content: '';
+	position: absolute;
+	z-index: -1;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.btn-4 {
+	border-radius: 50px;
+	border: 3px solid #fff;
+	color: #fff;
+	overflow: hidden;
+}
+.btn-4:active {
+	border-color: #17954c;
+	color: #17954c;
+}
+
+.btn-4:hover {
+	background: #24b662;
+}
+
+.btn-4:before {
+	position: absolute;
+	height: 100%;
+	font-size: 125%;
+	line-height: 3.5;
+	color: #fff;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+}
+
+.btn-4:active:before {
+	color: #17954c;
+}
+
+/* Button 4a */
+.btn-4a:before {
+	left: 130%;
+	top: 0;
+}
+
+.btn-4a:hover:before {
+	left: 80%;
+}
+
 /* Analyse buttons */
 
 
@@ -109,6 +167,12 @@ body {
   font-family: 'Roboto', sans-serif;
   background: url('../images/serol_bg_sm.jpg') repeat fixed #2b3e50;
   color: #fff;
+}
+
+.centre-container{
+  border: 2px solid #444;
+  border-radius: 20px;
+  background: rgba(0,0,0,0.2);
 }
 
 h1, h2, h3, h4, h5, h6, .target-name {
@@ -289,18 +353,38 @@ h5.modal-title{
 img.identify-image {
   object-fit: none; /* Do not scale the image */
   object-position: center; /* Center the image within the element */
-  max-width: 300px;
-  height: 100%;
+  max-height: 300px;
   margin-bottom: 1rem;
 }
 
-.side-panel {
-  background-color: rgba(0,0,0, 0.2);
-  border: 3px solid #fff;
+.speech-bubble {
+    background-color: #222;
+    border: 1px solid #c8c8c8;
+    border-radius: 5px;
+    text-align: center;
+    padding: 1vw;
+    color:#555;
 }
 
-.side-panel p {
-  font-size:1rem;
+.speech-bubble .arrow {
+    border-style: solid;
+    position: absolute;
+}
+
+.bottom {
+    border-color: #c8c8c8 transparent transparent transparent;
+    border-width: 8px 8px 0px 8px;
+    bottom: -8px;
+}
+
+.bottom:after {
+    border-color: #222 transparent transparent transparent;
+    border-style: solid;
+    border-width: 7px 7px 0px 7px;
+    bottom: 1px;
+    content: "";
+    position: absolute;
+    left: -7px;
 }
 
 /* Image identify
@@ -438,6 +522,7 @@ img.identify-image {
 
 .question-container ul li:hover .check {
   border: 5px solid #FFFFFF;
+  background: #fff;
 }
 
 .question-container ul li .check::before {
@@ -466,6 +551,10 @@ input[type=radio]:checked ~ label{
   color: #0DFF92;
 }
 
+input[type=radio]:checked ~ .check:active{
+  background: #0DFF92;
+}
+
 /* Wrapper layouts
 */
 
@@ -488,24 +577,97 @@ input[type=radio]:checked ~ label{
 
 /* Ribbon styles */
 
-.corner-ribbon{
-  text-align: center;
-  color: #f0f0f0;
-  z-index: 0;
-  left: auto;
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  position: fixed;
-  box-shadow: 0 0 3px rgba(0,0,0,.7);
-}
 
-.corner-ribbon.top-right{
-  width: 500px;
-  top: 100px;
-  right: -110px;
+.corner-ribbon{
+  width: 300px;
+  position: absolute;
+  top: 50px;
+  left: -60px;
+  text-align: center;
   line-height: 50px;
   letter-spacing: 1px;
+  color: #f0f0f0;
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
 }
+
+/* Serol
+*/
+
+#serol {
+    max-width: 300px;
+}
+
+#face {
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  border:12px #aaa solid;
+  background-color: #ccc;
+  height:100px;
+  width:100%;
+}
+.eye {
+  position: relative;
+  top:32%;
+  border-radius: 50%;
+  background-color:#222;
+  width:19%;
+  height:55%;
+}
+.left {
+  left:8%;
+  float:left;
+}
+.right{
+  right:8%;
+  float:right;
+}
+.pupil{
+  position: relative;
+  top:20%;
+  left:50%;
+  border-radius: 50%;
+  background-color:#fff;
+  width:15px;
+  height:15px;
+}
+
+#mouth {
+  position: relative;
+  top:75%;
+  left: 40%;
+  width:10%;
+  border-top: 20px solid #222;
+  border-left: 10px solid transparent;
+  border-right:30px solid transparent;
+  border-bottom:30px solid transparent;
+  transform: rotate(-5deg);
+  -ms-transform: rotate(-5deg); /* IE 9 */
+  -webkit-transform: rotate(-5deg); /* Safari and Chrome */
+  }
+
+  #neck {
+    background: linear-gradient(to right,
+                        transparent 0%,
+                        transparent calc(50% - 10px),
+                        #999 calc(50% - 10px),
+                        #999 calc(50% + 10px),
+                        transparent calc(50% + 10px),
+                        transparent 100%);
+    min-height: 20px;
+  }
+
+  #body{
+    margin:0 auto;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    border:12px #aaa solid;
+    background-color: #222;
+    min-height:150px;
+    width:50%;
+  }
 
 @media (min-width: 40em) {
   /* Pull out the header and footer */
