--- a/explorer/templates/explorer/base.html
+++ b/explorer/templates/explorer/base.html
@@ -23,34 +23,22 @@
   <body>
 
     <div class="site-wrapper {% block wrapper-class%}{%endblock%}">
-        <nav class="navbar navbar-toggleable-md navbar-inverse nav-head">
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-brand" href="/"><img src="{% static 'explorer/images/serol_logo_sm.png'%}" /></a>
-
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item"><a class="nav-link" href="#">{% trans "Become a Cosmic Explorer" %}</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">{% trans "About Serol" %}</a></li>
-              {% if request.user.is_authenticated %}
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  {{ request.user}}
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="{% url 'stickers' %}">{% trans "Your Stickers" %}</a>
-                  <a class="dropdown-item" href="{% url 'auth_logout' %}" id="logout">{% trans "Logout" %}</a>
-                </div>
-              </li>
-              {% else %}
-              <li class="nav-item" id="login"><a class="nav-link" href="{% url 'auth_login' %}">{% trans "Login" %}</a></li>
-              {% endif %}
-            </ul>
-          </div>
-        </nav>
+      {% block menubar %}
+      {% endblock%}
 
 {% block main-content %}
+<div class="container">
+{% block main-header %}
+<h3><a href="{% url 'home' %}"><img src="{% static 'explorer/images/serol_logo_sm.png'%}" /></a> Challenge {{object.number}} : {{object.name}}</h3>
+{% endblock %}
+
+{% block main-body %}
+{% endblock %}
+</div>
+{% endblock %}
+
+{% block ribbon %}
+<div class="corner-ribbon sticky shadow mission-{{object.number}}-colour"><h2>{% trans "Mission" %} {{object.number}}</h2></div>
 {% endblock %}
 
 <div class="mastfoot">
