--- a/explorer/templates/explorer/challenge-identify.html
+++ b/explorer/templates/explorer/challenge-identify.html
@@ -37,21 +37,16 @@ $(document).ready(function(){
 </script>
 {% endblock %}
 
-{% block main-content %}
-<div class="container">
-  <!-- Example row of columns -->
+{% block challengename %}{{object.challenge.name}}{% endblock %}
+
+{% block main-body %}
+<div class="centre-container">
+<h1>{% trans "Which is your picture?" %}</h1>
   <div class="row">
-    <div class="col-lg-12">
-      <h1>{% trans "Click on your picture!" %}</h1>
-    </div>
-  </div>
-</div>
-<div class="container pt-2">
-  <div class="row">
-    <div class="col-md-8 offset-md-2">
+    <div class="col-lg-10">
       <div class="row">
         {% for i in "0123" %}
-        <div class="col-sm-6 pb-5 identify-container">
+        <div class="col-6 pb-2">
           <img src="http://placehold.it/300x300" alt="Avatar" class="identify-image img-fluid rounded" id="img-{{i}}">
           <div class="identify-middle">
             <div class="identify-text" id="img-text-{{i}}" data-mine="">
@@ -62,16 +57,16 @@ $(document).ready(function(){
         {% endfor %}
       </div>
     </div>
-    <div class="col-md-2">
-      <div class=" side-panel">
-      <p>{% trans "You asked for" %} <strong>{{progress.target}}</strong>.
-          {% trans "That's a" %} {{object.category}}.</p>
-      <p>{% trans "Which picture is it?" %}</p>
-    </div>
+    <div class="col-lg-2">
+        <div class="speech-bubble">
+          <div class="arrow bottom right"></div>
+          {% trans "You asked for" %} <strong>{{progress.target}}</strong>.
+              {% trans "That's a" %} {{object.category}}.</p>
+          {% trans "Click on your picture" %}</p>
+        </div>
     </div>
   </div>
 </div>
-<div class="corner-ribbon top-right sticky shadow mission-{{object.number}}-colour"><h2>{% trans "Mission" %} {{object.number}}</h2></div>
 <div class="identify-answer identify-yes" style="display:none;">{% trans "Correct!" %}</div>
 <div class="identify-answer identify-no" style="display:none;">{% trans "Try Again!" %}</div>
 
