--- a/explorer/templates/explorer/challenge-message.html
+++ b/explorer/templates/explorer/challenge-message.html
@@ -3,50 +3,23 @@
 
 {% block wrapper-class%}challenge mission-{{object.mission.number}}-sidebar{%endblock%}
 
-{% block main-content %}
-<div class="container-fluid">
-  <!-- Example row of columns -->
-  <div class="row page-header">
-    <div class="col-lg-12">
-        <h1 class="display-1">{% trans "Challenge" %} {{object.number }}</h1>
-    </div>
-  </div>
-</div>
+{% block main-body %}
+<div class="centre-container">
+  <h1>{% trans "Analyse your image!" %}</h1>
+  <div class="row">
+    <div class="col-lg-8">
 <div class="container">
   <div class="row">
-    <div class="col-md-10 offset-md-2">
+    <div class="col-lg-10 offset-lg-2">
     {% if progress.status == "New"%}
     <p class="lead">{{object.description|safe}}</p>
     <a href="{% url 'observe' object.pk %}" class="tn btn-info btn-lg  animated tada">Start the challenge ></a>
-    {% elif progress.status == "Submitted" %}
-    <p>{% trans "Serol has asked Las Cumbres Observatory to take your picture in" %}</p>
-    <div id="request-message">
-      <div class="row">
-        <div class="col-md-2 offset-md-2">
-          <i class="fas fa-alarm-clock fa-10x"></i>
-        </div>
-        <div class="col-md-8">
-        <h2 class="request-status-info"><span id="request-time"><i class="fa fa-cog fa-spin fa-fw"></i></span></h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-2  offset-md-2">
-          <i class="fas fa-compass fa-10x"></i>
-        </div>
-        <div class="col-md-8">
-          <h2 class="request-status-info" id="request-site">
-            <i class="fa fa-cog fa-spin fa-fw"></i>
-          </h2>
-        </div>
-      </div>
-    </div>
     {% elif progress.status == "Completed" %}
     {% elif progress.status == "Failed" %}
     {% endif %}
   </div>
   </div>
   </div>
-  <div class="corner-ribbon top-right sticky shadow mission-{{object.number}}-colour"><h1>{% trans "Mission" %} {{object.number}}</h1></div>
 
 {% endblock %}
 
