--- a/explorer/templates/explorer/challenge-observe.html
+++ b/explorer/templates/explorer/challenge-observe.html
@@ -73,17 +73,9 @@ $(document).ready(function(){
 {% endblock%}
 {% block wrapper-class%}challenge mission-{{object.mission.number}}-sidebar{%endblock%}
 
-{% block main-content %}
-<div class="container-fluid">
-  <!-- Example row of columns -->
-  <div class="row page-header">
-    <div class="col-lg-12">
-        <h1>{% trans "Challenge" %} {{object.number }}</h1>
-        <p>{{object.action}}</p>
-    </div>
-  </div>
-</div>
-<div class="container">
+{% block main-body %}
+<div class="centre-container">
+  <h1>{{object.action}}</h1>
   <div class="row">
     {% for i in "012345" %}
     <div class="col-lg-4  col-sm-6 pb-5 target-holder">
@@ -116,4 +108,5 @@ $(document).ready(function(){
       </div>
     </div>
   </div>
+</div>
 {% endblock %}
